# SlayTheAmethystModded

./: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts  test.md
.opencode/: opencode.json
.opencode/skills/android-mobile-frontend-design/: SKILL.md
.opencode/skills/android-mobile-frontend-design/agents/: openai.yaml
.opencode/skills/compose-performance-audit/: SKILL.md
.opencode/skills/compose-performance-audit/agents/: openai.yaml
.opencode/skills/jetpack-compose-patterns/: SKILL.md
.opencode/skills/tdd-development/: SKILL.md
.opencode/skills/tdd-development/agents/: openai.yaml
app/: build.gradle.kts  proguard-rules.pro
app/src/debug/: AndroidManifest.xml
app/src/main/: AndroidManifest.xml
app/src/main/jni/: CMakeLists.txt  workshop_zstd.c
app/src/main/jni/ctxbridges/: gl_bridge.c
app/src/main/res/drawable/: ic_close.xml  ic_dock_market.xml  ic_dock_mods.xml  ic_dock_settings.xml  ic_launcher_update_available.xml  ic_log.xml  ic_original_text.xml  ic_pause.xml  ic_refresh.xml  ic_settings_launcher.xml  ic_settings_native_library.xml  ic_translate.xml  ic_workshop_cancelling.xml  ic_workshop_downloading.xml  ic_workshop_installed.xml  ic_workshop_paused.xml  ic_workshop_queue.xml  ic_workshop_rating_star.xml  ic_workshop_rating_star_fill.xml  ic_workshop_retry.xml  ic_workshop_subscriptions.xml  ic_workshop_update.xml
app/src/main/res/layout/: activity_game.xml
app/src/main/res/values-zh-rCN/: strings.xml
docs/: README.en.md  mod-import-vibe-plan.md  workshop-migration-task-list.md
docs/release/note/: v1.3.6-hotfix1.md  v1.3.6.md  v1.4.0.md  v1.4.1.md  v1.4.2.md  v1.4.3.md  v1.4.4.md
gradle/: libs.versions.toml
gradle/build-logic/: build.gradle.kts  settings.gradle.kts
mods/amethyst-runtime-compat/: README.md
mods/ram-saver/: README.md  build.gradle.kts
steam-protocol/: build.gradle.kts
steam-protocol/src/main/proto/: steam_messages.proto
workshop-core/: build.gradle.kts
(+225 files in other folders)
